--- a/TESTING/index.html
+++ b/TESTING/index.html
@@ -126,7 +126,7 @@
 		<div class="btn-group">
 			<button class="verticleButton" onclick="location.href='portfolio';">SOFTWARE DEVELOPMENT PORTFOLIO</button>
 			<button class="verticleButton" onclick="location.href='devops';">DEV OPS</button>
-			<button class="verticleButton">PROTOTYPES and RESEARCH
+			<button class="verticleButton">PROTOTYPES RESEARCH
 				<div class="dropdown">
 					<div class="dropdown-content">
 						<h5 class="dropdown-header">Research</h5>
