--- a/TESTING/index.html
+++ b/TESTING/index.html
@@ -126,19 +126,9 @@
 		<div class="btn-group">
 			<button class="verticleButton" onclick="location.href='portfolio';">SOFTWARE DEVELOPMENT PORTFOLIO</button>
 			<button class="verticleButton" onclick="location.href='devops';">DEV OPS</button>
-			<button class="verticleButton">PROTOTYPES RESEARCH
-				<div class="dropdown">
-					<div class="dropdown-content">
-						<h5 class="dropdown-header">Research</h5>
-						<li><a class="dropdown-item" href="/cs7646" title="Machine Learning (ML)">Machine Learning (ML)</a></li>
-						<li><a class="dropdown-item" href="/cs6238" title="Secure Computer Systems (SCI)">Secure Computer Systems (SCI)</a></li>
-						<li><a class="dropdown-item" href="/cs6750" title="Human Computer Interaction (HCI)">Human-Computer Interaction (HCI)</a></li>
-						<h5 class="dropdown-header">Computer Vision (CV)</h5>
-						<li><a class="dropdown-item" href="https://goo.gl/photos/KEpwD9mZ3EBcycQk7"title="Computer Vision (CV) Prototype" target="_blank">CV Prototype-1</a></li>
-						<li><a class="dropdown-item" href="https://goo.gl/photos/Hv9WaPvd4QrQJ9TZA"title="Computer Vision (CV) Prototype" target="_blank">CV Prototype-2</a></li>
-					</div>
-				</div>
-			</button>
+			<div class="dropdown">
+				<button class="verticleButton">PROTOTYPES and RESEARCH</button>
+			</div>
 		</div>
 		
 		<script>
