--- a/TESTING/index.html
+++ b/TESTING/index.html
@@ -123,10 +123,10 @@
 			</div>
 		</script>
 				
-		<div class="verticleButton">
-			<button onclick="location.href='portfolio';">SOFTWARE DEVELOPMENT PORTFOLIO</button>
-			<button onclick="location.href='devops';">DEV OPS</button>
-			<button>PROTOTYPES RESEARCH</button>
+		<div class="btn-group">
+			<verticleButton onclick="location.href='portfolio';">SOFTWARE DEVELOPMENT PORTFOLIO</button>
+			<verticleButton onclick="location.href='devops';">DEV OPS</button>
+			<verticleButton>PROTOTYPES and RESEARCH</button>
 		</div>
 		
 		<script>
