--- a/TESTING/index.html
+++ b/TESTING/index.html
@@ -125,7 +125,7 @@
 				
 		<div class="btn-group">
 			<verticleButton onclick="location.href='portfolio';">SOFTWARE DEVELOPMENT PORTFOLIO</button>
-			<verticleButton onclick="location.href='devops';">DEV OPS</button>
+			<verticleButton onclick="location.href='devops';">DEV OPS
 			<div class="dropdown">
 				<verticleButton>PROTOTYPES and RESEARCH</button>
 				<div class="dropdown-content">
@@ -137,7 +137,7 @@
 					<li><a class="dropdown-item" href="https://goo.gl/photos/KEpwD9mZ3EBcycQk7"title="Computer Vision (CV) Prototype" target="_blank">CV Prototype-1</a></li>
 					<li><a class="dropdown-item" href="https://goo.gl/photos/Hv9WaPvd4QrQJ9TZA"title="Computer Vision (CV) Prototype" target="_blank">CV Prototype-2</a></li>
 				</div>
-			</div>
+			</button></div>
 		</div>
 		
 		<script>
