--- a/TESTING/index.html
+++ b/TESTING/index.html
@@ -125,9 +125,10 @@
 				
 		<div class="btn-group">
 			<verticleButton onclick="location.href='portfolio';">SOFTWARE DEVELOPMENT PORTFOLIO</button>
-			<verticleButton onclick="location.href='devops';">DEV OPS
-			<div class="dropdown">
+			<verticleButton onclick="location.href='devops';">DEV OPS</button>
+			
 				<verticleButton>PROTOTYPES and RESEARCH</button>
+				<div class="dropdown">
 				<div class="dropdown-content">
 					<h5 class="dropdown-header">Research</h5>
 					<li><a class="dropdown-item" href="/cs7646" title="Machine Learning (ML)">Machine Learning (ML)</a></li>
@@ -137,7 +138,7 @@
 					<li><a class="dropdown-item" href="https://goo.gl/photos/KEpwD9mZ3EBcycQk7"title="Computer Vision (CV) Prototype" target="_blank">CV Prototype-1</a></li>
 					<li><a class="dropdown-item" href="https://goo.gl/photos/Hv9WaPvd4QrQJ9TZA"title="Computer Vision (CV) Prototype" target="_blank">CV Prototype-2</a></li>
 				</div>
-			</button></div>
+			</div>
 		</div>
 		
 		<script>
