--- a/TESTING/index.html
+++ b/TESTING/index.html
@@ -59,16 +59,15 @@
 				color: orange;
 				font-weight: bold;
 				font-size: 18px;
-				position: relative;
+				position: absolute;
 				float: left;
 			}
 
 			.dropdown-content {
 				/* z-index: 1; */
 				display: none;
-				position: relative;
+				position: absolute;
 				float: left;
-				min-width: 150px;
 				/* box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); */
 				padding: 30px 5px 10px 10px;
 			}
