--- a/TESTING/index.html
+++ b/TESTING/index.html
@@ -32,6 +32,7 @@
 				padding: 10px 24px; /* Some padding */
 				cursor: pointer; /* Pointer/hand icon */
 				display: block; /* Make the buttons appear below each other */
+				width: 40%;
 			}
 
 			/* Clear floats (clearfix hack) */
@@ -59,14 +60,14 @@
 				color: orange;
 				font-weight: bold;
 				font-size: 18px;
-				position: absolute;
+				position: relative;
 				float: left;
 			}
 
 			.dropdown-content {
 				/* z-index: 1; */
 				display: none;
-				position: absolute;
+				position: relative;
 				float: left;
 				/* box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); */
 				padding: 30px 5px 10px 10px;
