--- a/TESTING/index.html
+++ b/TESTING/index.html
@@ -32,7 +32,7 @@
 				padding: 10px 24px; /* Some padding */
 				cursor: pointer; /* Pointer/hand icon */
 				display: block; /* Make the buttons appear below each other */
-				width: 40%;
+				width: 35%;
 			}
 
 			/* Clear floats (clearfix hack) */
@@ -62,6 +62,7 @@
 				font-size: 18px;
 				position: relative;
 				float: left;
+				width: 35%;
 			}
 
 			.dropdown-content {
@@ -124,7 +125,17 @@
 			<verticleButton onclick="location.href='portfolio';">SOFTWARE DEVELOPMENT PORTFOLIO</button>
 			<verticleButton onclick="location.href='devops';">DEV OPS</button>
 			<verticleButton>PROTOTYPES and RESEARCH</button>
-				
+				<div class="dropdown">
+					<div class="dropdown-content">
+						<h5 class="dropdown-header">Research</h5>
+						<li><a class="dropdown-item" href="/cs7646" title="Machine Learning (ML)">Machine Learning (ML)</a></li>
+						<li><a class="dropdown-item" href="/cs6238" title="Secure Computer Systems (SCI)">Secure Computer Systems (SCI)</a></li>
+						<li><a class="dropdown-item" href="/cs6750" title="Human Computer Interaction (HCI)">Human-Computer Interaction (HCI)</a></li>
+						<h5 class="dropdown-header">Computer Vision (CV)</h5>
+						<li><a class="dropdown-item" href="https://goo.gl/photos/KEpwD9mZ3EBcycQk7"title="Computer Vision (CV) Prototype" target="_blank">CV Prototype-1</a></li>
+						<li><a class="dropdown-item" href="https://goo.gl/photos/Hv9WaPvd4QrQJ9TZA"title="Computer Vision (CV) Prototype" target="_blank">CV Prototype-2</a></li>
+					</div>
+				</div>
 		</div>
 		
 		<script>
