--- a/TESTING/index.html
+++ b/TESTING/index.html
@@ -107,7 +107,7 @@
 			<div class="btn-group">
 				<button type="button" onclick="location.href='devops';" class="btn btn-primary">DEV OPS</button>
 				<div class="dropdown">
-					<button class="dropbtn">PROTOTYPES and RESEARCH</button>
+					<button class="dropbtn">PROTOTYPES RESEARCH</button>
 					<div class="dropdown-content">
 						<h5 class="dropdown-header">Research</h5>
 						<li><a class="dropdown-item" href="/cs7646" title="Machine Learning (ML)">Machine Learning (ML)</a></li>
