--- a/TESTING/index.html
+++ b/TESTING/index.html
@@ -62,7 +62,6 @@
 				font-size: 18px;
 				position: relative;
 				float: left;
-				width: 35%;
 			}
 
 			.dropdown-content {
@@ -70,6 +69,7 @@
 				display: none;
 				position: relative;
 				float: left;
+				min-width: 150px;
 				/* box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); */
 				padding: 30px 5px 10px 10px;
 			}
@@ -107,7 +107,7 @@
 			<div class="btn-group">
 				<button type="button" onclick="location.href='devops';" class="btn btn-primary">DEV OPS</button>
 				<div class="dropdown">
-					<button class="dropbtn">PROTOTYPES RESEARCH</button>
+					<button class="dropbtn">PROTOTYPES and RESEARCH</button>
 					<div class="dropdown-content">
 						<h5 class="dropdown-header">Research</h5>
 						<li><a class="dropdown-item" href="/cs7646" title="Machine Learning (ML)">Machine Learning (ML)</a></li>
@@ -123,9 +123,7 @@
 				
 		<div class="btn-group">
 			<verticleButton onclick="location.href='portfolio';">SOFTWARE DEVELOPMENT PORTFOLIO</button>
-			<br>
 			<verticleButton onclick="location.href='devops';">DEV OPS</button>
-			<br>
 			<verticleButton>PROTOTYPES and RESEARCH</button>
 				<div class="dropdown">
 					<div class="dropdown-content">
