--- a/TESTING/index.html
+++ b/TESTING/index.html
@@ -61,6 +61,7 @@
 				font-weight: bold;
 				font-size: 18px;
 				position: relative;
+				display: inline-block;
 				float: left;
 				min-width: 150px;
 			}
@@ -68,7 +69,7 @@
 			.dropdown-content {
 				/* z-index: 1; */
 				display: none;
-				position: relative;
+				position: absolute;
 				float: left;
 				/* box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); */
 				padding: 30px 5px 10px 10px;
@@ -125,8 +126,8 @@
 		<div class="btn-group">
 			<verticleButton onclick="location.href='portfolio';">SOFTWARE DEVELOPMENT PORTFOLIO</button>
 			<verticleButton onclick="location.href='devops';">DEV OPS</button>
-			<verticleButton
-				<div class="dropdown">
+			<div class="dropdown">
+				<verticleButton>PROTOTYPES and RESEARCH</button>
 					<div class="dropdown-content">
 						<h5 class="dropdown-header">Research</h5>
 						<li><a class="dropdown-item" href="/cs7646" title="Machine Learning (ML)">Machine Learning (ML)</a></li>
@@ -136,7 +137,7 @@
 						<li><a class="dropdown-item" href="https://goo.gl/photos/KEpwD9mZ3EBcycQk7"title="Computer Vision (CV) Prototype" target="_blank">CV Prototype-1</a></li>
 						<li><a class="dropdown-item" href="https://goo.gl/photos/Hv9WaPvd4QrQJ9TZA"title="Computer Vision (CV) Prototype" target="_blank">CV Prototype-2</a></li>
 					</div>
-				</div>>PROTOTYPES RESEARCH</button>
+			</div>
 		</div>
 		
 		<script>
