--- a/TESTING/index.html
+++ b/TESTING/index.html
@@ -23,18 +23,6 @@
 				float: left; /* Float the buttons side by side */
 			}
 			
-			.btn-group verticleButton {
-				background-color: #4CAF50; /* Green background */
-				border: 1px solid green; /* Green border */
-				color: white; /* White text */
-				font-weight: bold;
-				font-size: 18px;
-				padding: 10px 24px; /* Some padding */
-				cursor: pointer; /* Pointer/hand icon */
-				display: block; /* Make the buttons appear below each other */
-				width: 35%;
-			}
-
 			/* Clear floats (clearfix hack) */
 			.btn-group button:after {
 				content: "";
@@ -50,33 +38,66 @@
 			.btn-group button:hover {
 				background-color: #3e8e41;
 			}
-			.btn-group verticleButton:hover {
-				background-color: #3e8e41;
-			}
 			
-			.dropdown {
-				background-color: black;
-				border: 1px solid orange;
-				color: orange;
-				font-weight: bold;
-				font-size: 18px;
-				position: relative;
-				display: inline-block;
+			.navbar {
+				overflow: hidden;
+				background-color: #333;
+				font-family: Arial, Helvetica, sans-serif;
+			}
+
+			.navbar a {
 				float: left;
-				min-width: 150px;
+				font-size: 16px;
+				color: white;
+				text-align: center;
+				padding: 14px 16px;
+				text-decoration: none;
+			}
+
+			.dropdown {
+				float: left;
+				overflow: hidden;
+			}
+
+			.dropdown .dropbtn {
+				cursor: pointer;
+				font-size: 16px;  
+				border: none;
+				outline: none;
+				color: white;
+				padding: 14px 16px;
+				background-color: inherit;
+				font-family: inherit;
+				margin: 0;
+			}
+
+			.navbar a:hover, .dropdown:hover .dropbtn, .dropbtn:focus {
+				background-color: red;
 			}
 
 			.dropdown-content {
-				/* z-index: 1; */
 				display: none;
 				position: absolute;
-				float: left;
-				/* box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); */
-				padding: 30px 5px 10px 10px;
-				min-width: 150px;
+				background-color: #f9f9f9;
+				min-width: 160px;
+				box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+				z-index: 1;
 			}
 
-			.dropdown:hover .dropdown-content {
+			.dropdown-content a {
+				float: none;
+				color: black;
+				padding: 12px 16px;
+				text-decoration: none;
+				display: block;
+				text-align: left;
+			}
+
+			.dropdown-content a:hover {
+				background-color: #ddd;
+			}
+
+			.show {
 				display: block;
 			}
 			
@@ -125,7 +146,7 @@
 				
 		<div class="btn-group">
 			<verticleButton onclick="location.href='portfolio';">SOFTWARE DEVELOPMENT PORTFOLIO</button>
-			<verticleButton onclick="location.href='devops';">DEV OPS</button>
+			<verticleButton onclick="location.href='devops';">DEV OPS / WHITE PAPERS</button>
 			<div class="dropdown">
 				<verticleButton>PROTOTYPES and RESEARCH</button>
 					<div class="dropdown-content">
@@ -139,6 +160,44 @@
 					</div>
 			</div>
 		</div>
+		
+		<div class="navbar">
+			<a href="portfolio">SOFTWARE DEVELOPMENT PORTFOLIO</a>
+			<a href="devops">DEV OPS / WHITE PAPERS</a>
+			<div class="dropdown">
+				<button class="dropbtn" onclick="myFunction_Dropdown()">Dropdown
+					<i class="fa fa-caret-down"></i>
+				</button>
+		
+				<div class="dropdown-content" id="myDropdown">
+					<h5 class="dropdown-header">RESEARCH</h5>
+					<a href="/cs7646" title="Machine Learning (ML)">Machine Learning (ML)</a>
+					<a href="#">Link 2</a>
+					<a href="#">Link 3</a>
+				</div>
+			</div> 
+		</div>
+
+<h3>Dropdown Menu inside a Navigation Bar</h3>
+<p>Click on the "Dropdown" link to see the dropdown menu.</p>
+
+<script>
+/* When the user clicks on the button, 
+toggle between hiding and showing the dropdown content */
+function myFunction_Dropdown() {
+  document.getElementById("myDropdown").classList.toggle("show");
+}
+
+// Close the dropdown if the user clicks outside of it
+window.onclick = function(e) {
+  if (!e.target.matches('.dropbtn')) {
+  var myDropdown = document.getElementById("myDropdown");
+    if (myDropdown.classList.contains('show')) {
+      myDropdown.classList.remove('show');
+    }
+  }
+}
+</script>
 		
 		<script>
 			var gtech =  document.getElementById("gtech");
