NEW APPROACH DROPDOWN

--- a/TESTING/index.html
+++ b/TESTING/index.html
@@ -160,12 +160,13 @@
 					</div>
 			</div>
 		</div>
-		
+
+		<p>Click on the "Dropdown" link to see the menu.</p>
 		<div class="navbar">
 			<a href="portfolio">SOFTWARE DEVELOPMENT PORTFOLIO</a>
 			<a href="devops">DEV OPS / WHITE PAPERS</a>
 			<div class="dropdown">
-				<button class="dropbtn" onclick="myFunction_Dropdown()">Dropdown
+				<button class="dropbtn" onclick="myFunction_Dropdown()">PROTOTYPES / RESEARCH
 					<i class="fa fa-caret-down"></i>
 				</button>
 		
@@ -178,8 +179,6 @@
 			</div> 
 		</div>
 
-<h3>Dropdown Menu inside a Navigation Bar</h3>
-<p>Click on the "Dropdown" link to see the dropdown menu.</p>
 
 <script>
 /* When the user clicks on the button, 
