NEW APPROACH DROPDOWN

--- a/TESTING/index.html
+++ b/TESTING/index.html
@@ -171,7 +171,7 @@
 			<a href="devops">DEV OPS / WHITE PAPERS</a>
 			<div class="dropdown">
 				<button class="dropbtn" onclick="myFunction_Dropdown()">PROTOTYPES / RESEARCH
-					<i class="fa fa-caret-down"></i>
+					<i class="fa-caret-down"></i>
 				</button>
 		
 				<div class="dropdown-content" id="myDropdown">
