--- a/TESTING/index.html
+++ b/TESTING/index.html
@@ -114,6 +114,16 @@
 				display: block;
 				margin: auto;
 			}
+			
+			.caret {
+        width: 0;
+        height: 0;
+        display: inline-block;
+        border: 10px solid transparent;
+    }
+    .caret.down{
+        border-top-color: black;
+    }
 	</style>
 
 	<body>
@@ -171,7 +181,7 @@
 			<a href="devops">DEV OPS / WHITE PAPERS</a>
 			<div class="dropdown">
 				<button class="dropbtn" onclick="myFunction_Dropdown()">PROTOTYPES / RESEARCH
-					<i class="fa-caret-down"></i>
+					<i class="caret down"</i>
 				</button>
 		
 				<div class="dropdown-content" id="myDropdown">
