NEW APPROACH DROPDOWN

--- a/TESTING/index.html
+++ b/TESTING/index.html
@@ -116,14 +116,17 @@
 			}
 			
 			.caret {
-        width: 0;
-        height: 0;
-        display: inline-block;
-        border: 10px solid transparent;
-    }
-    .caret.down{
-        border-top-color: black;
-    }
+				background-color: black;
+				border: 1px solid black;
+				width: 0;
+				height: 0;
+				display: inline-block;
+				border: 10px solid transparent;
+			}
+    
+			.caret.down{
+				border-top-color: black;
+			}
 	</style>
 
 	<body>
@@ -181,6 +184,7 @@
 			<a href="devops">DEV OPS / WHITE PAPERS</a>
 			<div class="dropdown">
 				<button class="dropbtn" onclick="myFunction_Dropdown()">PROTOTYPES / RESEARCH
+					<!-- <i class="fa fa-caret-down"></i> <-->
 					<i class="caret down"</i>
 				</button>
 		
