NEW APPROACH DROPDOWN

--- a/TESTING/index.html
+++ b/TESTING/index.html
@@ -115,17 +115,11 @@
 				margin: auto;
 			}
 			
-			.caret {
-				background-color: black;
-				border: 1px solid black;
+			.arrow-down {
 				width: 0;
 				height: 0;
-				display: inline-block;
-				border: 10px solid transparent;
-			}
-    
-			.caret.down{
-				border-top-color: black;
+				border-left: 10px solid transparent;
+				border-right: 10px solid transparent;
 			}
 	</style>
 
@@ -185,7 +179,7 @@
 			<div class="dropdown">
 				<button class="dropbtn" onclick="myFunction_Dropdown()">PROTOTYPES / RESEARCH
 					<!-- <i class="fa fa-caret-down"></i> <-->
-					<i class="caret down"</i>
+					<i class="arrow-down"</i>
 				</button>
 		
 				<div class="dropdown-content" id="myDropdown">
