NEW APPROACH DROPDOWN

--- a/TESTING/index.html
+++ b/TESTING/index.html
@@ -7,7 +7,7 @@
 		
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
-		<link rel="stylesheet" href="docs/font-awesome.min.css">
+		<link rel="stylesheet" type="text/css" href="docs/font-awesome.min.css">
 	</head>
 
 	<style>
@@ -114,16 +114,6 @@
 				display: block;
 				margin: auto;
 			}
-			
-			.caret {
-        width: 0;
-        height: 0;
-        display: inline-block;
-        border: 10px solid transparent;
-    }
-    .caret.down{
-        border-top-color: black;
-    }
 	</style>
 
 	<body>
@@ -181,8 +171,7 @@
 			<a href="devops">DEV OPS / WHITE PAPERS</a>
 			<div class="dropdown">
 				<button class="dropbtn" onclick="myFunction_Dropdown()">PROTOTYPES / RESEARCH
-					<!-- <i class="fa fa-caret-down"></i> <-->
-					<i class="caret down"</i>
+					<i class="fa fa-caret-down"></i>
 				</button>
 		
 				<div class="dropdown-content" id="myDropdown">
