--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				text-justify: inter-word; 
 			} 
 
-			.btn-group button {
+			.btn-group contrast_button {
 				background-color: #4CAF50; /* Green background */
 				border: 1px solid green; /* Green border */
 				color: white; /* White text */
@@ -125,8 +125,8 @@
 		</div></p>
 		
 		<div class="btn-group">
-			<button type="button" onclick="setBG_Black()" class="btn btn-primary">HIGH CONTRAST</button>
-			<button type="button" onclick="setBG_White()" class="btn btn-primary">STD  CONTRAST</button>
+			<contrast_button type="button" onclick="setBG_Black()" class="btn btn-primary">HIGH CONTRAST</contrast_button>
+			<contrast_button type="button" onclick="setBG_White()" class="btn btn-primary">STD  CONTRAST</contrast_button>
 		</div>
 		<br><br><br>
 						
