--- a/index.html
+++ b/index.html
@@ -27,18 +27,18 @@
 			}
 			
 			/* Clear floats (clearfix hack) */
-			.btn-group button:after {
+			.btn-group contrast_button:after {
 				content: "";
 				clear: both;
 				display: table;
 			}
 
-			.btn-group button:not(:last-child) {
+			.btn-group contrast_button:not(:last-child) {
 				border-right: none; /* Prevent double borders */
 			}
 
 			/* Add a background color on hover */
-			.btn-group button:hover {
+			.btn-group contrast_button:hover {
 				background-color: #3e8e41;
 			}
 			
