--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				text-justify: inter-word; 
 			} 
 
-			.btn-group contrast_button {
+			.btn-group button {
 				background-color: #4CAF50; /* Green background */
 				border: 1px solid green; /* Green border */
 				color: white; /* White text */
@@ -27,22 +27,23 @@
 			}
 			
 			/* Clear floats (clearfix hack) */
-			.btn-group contrast_button:after {
+			.btn-group button:after {
 				content: "";
 				clear: both;
-				display: table;
+				display: inline-block:
 			}
 
-			.btn-group contrast_button:not(:last-child) {
+			.btn-group button:not(:last-child) {
 				border-right: none; /* Prevent double borders */
 			}
 
 			/* Add a background color on hover */
-			.btn-group contrast_button:hover {
+			.btn-group button:hover {
 				background-color: #3e8e41;
 			}
 			
 			.navbar {
+				display: inline-block:
 				overflow: hidden;
 				background-color: #333;
 				font-family: Arial, Helvetica, sans-serif;
@@ -125,8 +126,8 @@
 		</div></p>
 		
 		<div class="btn-group">
-			<contrast_button type="button" onclick="setBG_Black()" class="btn btn-primary">HIGH CONTRAST</contrast_button>
-			<contrast_button type="button" onclick="setBG_White()" class="btn btn-primary">STD  CONTRAST</contrast_button>
+			<button type="button" onclick="setBG_Black()" class="btn btn-primary">HIGH CONTRAST</button>
+			<button type="button" onclick="setBG_White()" class="btn btn-primary">STD  CONTRAST</button>
 		</div>
 		<br><br><br>
 						
