--- a/index.html
+++ b/index.html
@@ -45,14 +45,16 @@
 			.navbar {
 				display: inline-block:
 				overflow: hidden;
-				background-color: #333;
+				/* background-color: #333; */
+				background-color: gren;
 				font-family: Arial, Helvetica, sans-serif;
 			}
 
 			.navbar a {
 				float: left;
 				font-size: 16px;
-				color: white;
+				background-color: black;
+				color: orange;
 				text-align: center;
 				padding: 14px 16px;
 				text-decoration: none;
