--- a/index.html
+++ b/index.html
@@ -45,16 +45,16 @@
 			.navbar {
 				display: inline-block:
 				overflow: hidden;
-				/* background-color: #333; */
-				background-color: gren;
+				background-color: #4CAF50; /* Green background */
 				font-family: Arial, Helvetica, sans-serif;
 			}
 
 			.navbar a {
 				float: left;
 				font-size: 16px;
-				background-color: black;
-				color: orange;
+				background-color: #4CAF50; /* Green background */
+				border: 1px solid green; /* Green border */
+				color: white; /* White text */
 				text-align: center;
 				padding: 14px 16px;
 				text-decoration: none;
@@ -70,9 +70,12 @@
 				font-size: 16px;  
 				border: none;
 				outline: none;
-				color: white;
+				color: yellow;
 				padding: 14px 16px;
-				background-color: inherit;
+				/* background-color: inherit; */
+				background-color: #4CAF50; /* Green background */
+				border: 1px solid green; /* Green border */
+				color: white; /* White text */
 				font-family: inherit;
 				margin: 0;
 			}
