--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 			.navbar a {
 				float: left;
 				font-size: 16px;
+				font-weight: bold;
 				background-color: #4CAF50; /* Green background */
 				border: 1px solid green; /* Green border */
 				color: white; /* White text */
@@ -72,10 +73,7 @@
 				outline: none;
 				color: yellow;
 				padding: 14px 16px;
-				/* background-color: inherit; */
-				background-color: #4CAF50; /* Green background */
-				border: 1px solid green; /* Green border */
-				color: white; /* White text */
+				background-color: inherit;
 				font-family: inherit;
 				margin: 0;
 			}
