--- a/index.html
+++ b/index.html
@@ -73,7 +73,10 @@
 				outline: none;
 				color: yellow;
 				padding: 14px 16px;
-				background-color: inherit;
+				/* background-color: inherit; */
+				background-color: #4CAF50; /* Green background */
+				border: 1px solid green; /* Green border */
+				color: white; /* White text */
 				font-family: inherit;
 				margin: 0;
 			}
@@ -85,7 +88,9 @@
 			.dropdown-content {
 				display: none;
 				position: absolute;
-				background-color: #f9f9f9;
+				/* background-color: #f9f9f9; */
+				background-color: inherit;
+				color: black;
 				min-width: 160px;
 				box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 				z-index: 1;
@@ -93,6 +98,7 @@
 
 			.dropdown-content a {
 				float: none;
+				background-color: inherit;
 				color: black;
 				padding: 12px 16px;
 				text-decoration: none;
