--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
 				display: none;
 				position: absolute;
 				/* background-color: #f9f9f9; */
-				background-color: inherit;
-				color: black;
+				background-color: black;
+				color: orange;
 				min-width: 160px;
 				box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 				z-index: 1;
@@ -98,8 +98,8 @@
 
 			.dropdown-content a {
 				float: none;
-				background-color: inherit;
-				color: black;
+				background-color: black;
+				color: orange;
 				padding: 12px 16px;
 				text-decoration: none;
 				display: block;
