--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
 
 			.dropdown-content a {
 				float: none;
-				background-color: black;
-				color: orange;
+				background-color: green;
+				color: white;
 				padding: 12px 16px;
 				text-decoration: none;
 				display: block;
