--- a/index.html
+++ b/index.html
@@ -123,6 +123,13 @@
 				display: block;
 				margin: auto;
 			}
+			
+			p {
+				font-size: 1.5em;
+				line-height: 1.4em;
+				display: inline;
+				color: yellow;
+			}
 	</style>
 
 	<body>
