--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<head>
 		<img id ="gtech" class="center fit" style="width:500px;height:101px" src="images\gtech.png">
 		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="css/main.css">
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
 		<br><br>
 		
 		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,8 +13,10 @@
 			div { 
 				text-align: justify; 
 				text-justify: inter-word; 
-			} 
-
+			}
+			
+			
+			
 			.btn-group button {
 				background-color: #4CAF50; /* Green background */
 				border: 1px solid green; /* Green border */
@@ -122,14 +124,7 @@
 			.center {
 				display: block;
 				margin: auto;
-			}
-			
-			p {
-				font-size: 1.5em;
-				line-height: 1.4em;
-				display: inline;
-				color: yellow;
-			}
+			}			
 	</style>
 
 	<body>
