--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -56,6 +56,7 @@
 			function setBG_White() {
 				document.getElementsByTagName("BODY")[0].style.backgroundColor = "white";
 				document.body.style.color = "black";
+				document.p.style.color = "black";
 				gtech.src = "images/gtech.png";
 			}
 	</script>
