--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -57,6 +57,7 @@
 				document.getElementsByTagName("BODY")[0].style.backgroundColor = "white";
 				document.body.style.color = "black";
 				document.p.style.color = "black";
+				document.div.style.color = "black";
 				gtech.src = "images/gtech.png";
 			}
 	</script>
