--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,5 +1,5 @@
 <head>
-	<img id ="gtech" class="center fit" style="width:500px;height:101px" src="images/gtech.png">
+	<img id ="gtech" class="center fit" style="width:500px;height:101px" src="images\gtech.png">
 	<!-- link to main stylesheet -->
 	<link rel="stylesheet" type="text/css" href="../css/main.css">
 	<br><br>
@@ -51,14 +51,14 @@
 			function setBG_Black() {
 				document.getElementsByTagName("BODY")[0].style.backgroundColor = "black";
 				document.body.style.color = "yellow";
-				gtech.src = "images/gtech_HCS.png";
+				gtech.src = "images\gtech_HCS.png";
 			}
 			function setBG_White() {
 				document.getElementsByTagName("BODY")[0].style.backgroundColor = "white";
 				document.body.style.color = "black";
 				document.p.style.color = "black";
 				document.div.style.color = "black";
-				gtech.src = "images/gtech.png";
+				gtech.src = "images\gtech.png";
 			}
 	</script>
 	
