--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -51,14 +51,12 @@
 			function setBG_Black() {
 				document.getElementsByTagName("BODY")[0].style.backgroundColor = "black";
 				document.body.style.color = "yellow";
-				gtech.src = "https://robert-bobkoskie.github.io/cs6460/images/gtech_HCS.png";
+				gtech.src="images\gtech_HCS.png";
 			}
 			function setBG_White() {
 				document.getElementsByTagName("BODY")[0].style.backgroundColor = "white";
 				document.body.style.color = "black";
-				document.p.style.color = "black";
-				document.div.style.color = "black";
-				gtech.src = "https://robert-bobkoskie.github.io/cs6460/images/gtech.png";
+				gtech.src="images\gtech.png";
 			}
 	</script>
 	
