--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -38,9 +38,9 @@
 	<nav><ul>
 		<a href="/" target="_self">Home</a>	                	
 	</ul></nav>
-	<div><p>
+	<div>
 			Select High Contrast, or Standard (STD) Contrast for the webpage.
-	</div></p>
+	</div>
 	<div class="btn-group">
 			<button type="button" onclick="setBG_Black()" class="btn btn-primary">HIGH CONTRAST</button>
 			<button type="button" onclick="setBG_White()" class="btn btn-primary">STD  CONTRAST</button>
