--- a/cs7646/index.html
+++ b/cs7646/index.html
@@ -1,7 +1,7 @@
 <head>
 	<img id ="gtech" class="center fit" style="width:500px;height:101px" src="images\gtech.png">
 	<!-- link to main stylesheet -->
-	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="stylesheet" type="text/css" href="/css/main.css">
 	<br><br>
 </head>
 
