MODIFY ML DT DOC

--- a/cs7646/index.html
+++ b/cs7646/index.html
@@ -69,7 +69,7 @@
     <br>
 	<h1>ML Papers</h1>
 		<ul style="list-style: none;">
-			<li><a href="docs/Demo_ML_SL_DT.pdf" title="Decision Tree Tutorial" target="_self">Decision Tree Tutorial</a></li>
+			<li><a href="docs/Demo_ML_SL_DT2.pdf" title="Decision Tree Tutorial" target="_self">Decision Tree Tutorial</a></li>
 			<li><a href="docs/rbobkoskie3-analysisP1.pdf" title="Supervised Learning" target="_self">Supervised Learning</a></li>
 			<li><a href="docs/rbobkoskie3-analysisP2.pdf" title="Randomized Optimization" target="_self">Randomized Optimization</a></li>
 			<li><a href="docs/rbobkoskie3-analysisP3.pdf" title="Unsupervised Learning and Dimensionality Reduction" target="_self">Unsupervised Learning and Dimensionality Reduction</a></li>
